# spelling_test

./: README.md
full_stack/: README.md  manage.py  pyproject.toml
full_stack/accounts/: views.py
full_stack/accounts/templates/auth/: layout.html  login.html  signup.html
full_stack/api/: urls.py  views.py
full_stack/api/words/: sounds.json
full_stack/beedle/: asgi.py  settings.py  urls.py  wsgi.py
full_stack/frontend/: urls.py  views.py
full_stack/frontend/static/: index.js
full_stack/frontend/templates/frontend/: index.html
full_stack/staticfiles/: index-Cwvqe6rX.js
generator/: generate.py  process_audio.py  pyproject.toml
process_dict/: dict.json  process_dict.py  test_dict.json  wordlist.txt
speller_ui/: package.json  pnpm-lock.yaml
speller_ui/public/api/: next
speller_ui/src/: App.tsx
speller_ui/src/components/: answer_box.tsx  sound_player.tsx
