[tool.poetry]
name = "spelling-test-audio-generator"
version = "0.1.0"
description = ""
authors = ["bohrium2b <dzm2026@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tts = "^0.22.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
